# StandaloneCgnsWriter

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  QUICK_START_VCPKG.md  README.md  VCPKG_DEPLOYMENT.md  compile_commands.json  vcpkg.json
.cache/clangd/index/: CgnsWriter.cpp.2D1425EDF11A7544.idx  CgnsWriter.h.1ECD4FBCD6637453.idx  CgnsWriterCore.cpp.6EFDE4E9A0D351C7.idx  CgnsWriterCore.h.90A1D253E36299AD.idx  CgnsWriterExport.h.96479AFADD193077.idx  main.cpp.6956D3DF40419916.idx
example/: core_example.cpp
src/: CgnsWriter.cpp  CgnsWriter.h  CgnsWriterCore.cpp  CgnsWriterCore.h  CgnsWriterExport.h  main.cpp
vcpkg/ports/standalone-cgns-writer/: CHANGELOG.md  README.md  portfile.cmake  vcpkg.json
vcpkg/registry-example/versions/s/: standalone-cgns-writer.json
